# divine

./: .gitignore  README.md  pyproject.toml
divine/: __init__.py  heaven.py  layout.py  paradise.py  realm.py  screen.py  utilities.py
examples/: game_menu.py  minigame.py  test.py  website.py
src/divine/: __init__.py  __main__.py  core.py  cursor.py  domains.py  heaven.py  layout.py  paradise.py  realm.py  screen.py  types.py
src/divine/domains/: hell.py  stdscr.py
tests/: test_heaven.py  test_inside.py  test_layout.py  test_menu.py
