[project]
name = "divine"
version = "0.0.1"
description = ""
authors = [
    {name = "Nay Yaung Oo",email = "nayyaunguu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "divine", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
